--- a/Python/Simulações Financeiras com Monte Carlo Bootstrap e Modelo Hibrido(tStudent +GARCH)/readme.me
+++ b/Python/Simulações Financeiras com Monte Carlo Bootstrap e Modelo Hibrido(tStudent +GARCH)/readme.me
@@ -1,1 +1,6 @@
+Nosso estudo parte de um problema comum.
+
+Prever quanto tempo levará para atingir uma meta financeira diante de um cenário econômico incerto. Para isso, empregamos simulações de Monte Carlo, Bootstrap e um modelo híbrido com GARCH
+
+https://colab.research.google.com/drive/1KcjzcVLBM4bPrBcGL9vs7WqM9-CX3fdf#scrollTo=JGI893bZf8vT
 
