--- a/Python/Simulações Financeiras com Monte Carlo Bootstrap e Modelo Hibrido(tStudent +GARCH)/readme.me
+++ b/Python/Simulações Financeiras com Monte Carlo Bootstrap e Modelo Hibrido(tStudent +GARCH)/readme.me
@@ -2,4 +2,8 @@ Nosso estudo parte de um problema comum.
 
 Prever quanto tempo levará para atingir uma meta financeira diante de um cenário econômico incerto. Para isso, empregamos simulações de Monte Carlo, Bootstrap e um modelo híbrido com GARCH
 
-https://colab.research.google.com/drive/1USFZAJye2sBVuz2XWE0yNHw3ypUcnttG
+link notebook Goolge Colab
+
+https://colab.research.google.com/drive/1USFZAJye2sBVuz2XWE0yNHw3ypUcnttG#scrollTo=R3_TxklHy35c
+
+
